除了注册和用户登陆、管理后台和写文章的一切。。

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,7 +1,11 @@
 body{
-    margin-top: 3pt;
+    padding-top: 3pt;
 }
 
 .lnc-marginBox{
     margin-top: 5pt;
+}
+
+.label{
+    display: inline-block;
 }
